--- a/milestones/index.html
+++ b/milestones/index.html
@@ -3,5 +3,13 @@
     <p>
       Welcome to CUS 1172
     </p>
+
+    <p>
+        This is an intro to Web Development
+    </p>
+
+    <p>
+        This is Lesson 1
+    </p>
   </body>
 </html>
