--- a/milestones/index.html
+++ b/milestones/index.html
@@ -1,17 +1,11 @@
 <html>
     <head>
-        <title>
-            CUS1172
-        </title>
-
-
+        <title> Welcome to CUS 1172 </title>
     </head>
-
     <body>
-        <h1>CUS1172</h1>\
-        <p>Welcome</p>
-        <h2>CUS1172</h2>
-        <h3>CUS1172</h3>
 
+
+        
     </body>
+    </head>
 </html>
