--- a/milestones/index.html
+++ b/milestones/index.html
@@ -4,8 +4,9 @@
     </head>
     <body>
 
-    <h1> Hello, this is my webage in HI tag </h1>
-
+    <h1> Hello, this is my webpage in h1 tag </h1>
+    <h2> Hello, this is my webpage in h2 tag </h2>
+    <h3> Hello, this is my webpage in h3 tag </h3>
 
         
     </body>
