--- a/milestones/index.html
+++ b/milestones/index.html
@@ -4,6 +4,8 @@
     </head>
     <body>
 
+        Welcome to CUS1172. This is an intro to Web Development. 
+
     <h1> Hello, this is my webpage in h1 tag </h1>
     <h2> Hello, this is my webpage in h2 tag </h2>
     <h3> Hello, this is my webpage in h3 tag </h3>
